gitops/infra/homelab/yamtrack/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: yamtrack
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
